# SimpleSwiftPackage

./: .gitignore  BUILD.bazel  MODULE.bazel  Package.swift  README.md
Sources/SimpleSwiftPackage/: SimpleSwiftPackage.swift
Tests/SimpleSwiftPackageTests/: SimpleSwiftPackageTests.swift
